--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -2,10 +2,16 @@ DATABASE_URL = url
 
 PORT = port number
 
-TYPEORM_CONNECTION = connection
-TYPEORM_HOST = local
-TYPEORM_USERNAME = username
-TYPEORM_PASSWORD = mypassword
-TYPEORM_DATABASE = myDB
-TYPEORM_PORT = portnum
-TYPEORM_LOGGING =TRUE
+DATABASE_CONNECTION = connection
+DATABASE_HOST = local
+DATABASE_USERNAM = username
+DATABASE_PASSWORD = mypassword
+DATABASE_NAME = myDB
+DATABASE_PORT = portnum
+DATABASE_LOGGING =TRUE
+
+JWT_SECRET=yourt_secret
+ALGORITHM=algorithm
+JWT_EXPIRES_IN=10h
+
+SESSION_SECRET=your_secret
