--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,12 @@
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "chai": "^5.1.1",
     "jest": "^29.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sinon": "^19.0.2",
+    "sinon-express-mock": "^2.2.1"
   }
 }
